test/parser/cases/invalid/small/missing_semicolon.cp
main()
{
    let value = 1
}
